--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <body>
         <h1>Git demo</h1>
+        <p>somthing</p>
+        <script src="app.js"></script>
     </body>
 </html>
